# DAutoSorter

./: Cargo.toml  DAutoSorter.xml  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
